Fixed some responsive scaling issues
- The resume page has a much nicer format now when transitioning to
smaller screens. Text overlap/overflow is minimal (though still has some
kinks)
- Rolodex and Micro game pages have better scaled images for their
respective pages.

--- a/dylangallardo.com/css/business-casual.css
+++ b/dylangallardo.com/css/business-casual.css
@@ -371,6 +371,14 @@ hr {
     margin: auto;
 }
 
+.img-top-box {
+    display: block;
+    position: relative;
+    width: 40%;
+    z-index: 5;
+    margin: 0 auto;
+}
+
 .contact-icons {
     text-align: center;
 }
@@ -407,6 +415,10 @@ footer p {
         margin-right: 5pc;
         margin-left: 5pc;
     }
+
+    .img-top-box {
+        width: 70%;
+    }
 }
 
 @media screen and (min-width:768px) {
@@ -415,7 +427,6 @@ footer p {
         margin: 0;
         padding: 30px 0 10px;
         text-align: center;
-        /*text-shadow: 1px 1px 2px rgba(0,0,0,0.5);*/
         font-family: 'Audiowide',"Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 4em;
         font-weight: 200;
@@ -437,7 +448,6 @@ footer p {
         margin: 0;
         padding: 0 0 40px;
         text-align: center;
-        /*text-shadow: 1px 1px 2px rgba(0,0,0,0.5);*/
         text-transform: uppercase;
         font-size: 1.25em;
         font-weight: 400;
